Fix label position column visibility select

--- a/popup/tableview/theme/table-theme.css
+++ b/popup/tableview/theme/table-theme.css
@@ -80,6 +80,12 @@ span.col-select {
     border-radius: 4px;
     box-shadow: inset 2px 2px 2px rgba(0,0,0,0.5), 2px 2px 0 rgba(188, 188, 188, 0.4);
 }
+span.col-select-title {
+    margin-left: 25px;
+}
+button.active span.col-select-title {
+    margin-left: 15px;
+}
 button.buttons-columnVisibility.active span span.col-select {
     width: 16px;
     height: 16px;
